# rent-price-prediction

./: Makefile  README.md  logging_test.py  pyproject.toml
.github/workflows/: workflow.yml
inference_service/: Makefile  pyproject.toml  setup.cfg
inference_service/.github/actions/build-application/: action.yml
inference_service/.github/workflows/: lint.yml
inference_service/app/: run.py
inference_service/app/api/: prediction.py
inference_service/app/config/: .env  __init__.py  model.py
inference_service/app/model/: rf_db_v1
inference_service/app/schema/: apartments.py
inference_service/app/services/: __init__.py  model_inference.py
project/: Makefile  README.md  pyproject.toml  setup.cfg
project/basic/: random_forest_model.ipynb
project/src/: runner_builder.py  runner_inference.py
project/src/config/: logger.py
project/src/model/: model_builder.py
project/src/model/pipeline/: model.py  preparation.py
src/: db.sqlite  runner.py
src/config/: .env  db.py
src/db/: db_model.py
src/model/: model_service.py
src/model/models/: rf_v1
src/model/pipeline/: collection.py
