[tool.poetry]
name = "inference-service"
version = "0.1.0"
description = ""
authors = ["Jeffrey Ojuederhie <vgauss07@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.0"
pydantic = "^2.11.3"
loguru = "^0.7.3"
config = "^0.5.1"
pydantic-settings = "^2.9.1"
scikit-learn = "^1.6.1"
wemake-python-styleguide = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
